--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             <article>
                 <h2 id="sobreMi">Sobre mi.</h2>
                 <p>Me llamo Ana Clara Culeddu, tengo 17 años y estudio una tecnicatura en Computación. <br>
-                    Tengo 0 experiencia en trabajos pero me gustaría empezar :)
+                    No tengo experiencia trabajando, por lo que me gustaría empezar con desarrollo web ya que creo 
+                    que es en lo que mejor me especializo.
                 </p>
             </article>
             <article class="ladoContrario">
