--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
             </article>
             <article class="ladoContrario">
                 <h2 id="proyectos">Proyectos.</h2>
-                <p>Estos son algunos proyectos que he hecho a lo largo de mi aprendizaje:</p>
+                <p>Al ser estudiante, no he tenido tiempo para proyectos personales, pero he practicado a través de cursos y ejercicios que podrán
+                    encontrar en mi Github (En el final de este portafolio lo van a encontrar). <br>
+                    Estos son algunos proyectos que he hecho a lo largo de mi aprendizaje:</p>
                 <ul>
                     <a href="https://bibliolibro.netlify.app/" target="_BLANCK"> · Bibliolibro</a>: Este trabajo fue realizado para el curso
                     de desarrollo web 1. Si bien es un simulador de blog sencillo hecho principalmente con HTML Y CSS, tiene la 
@@ -102,7 +104,7 @@
         <h6>
         Página hecha por Ana Clara Culeddu<br>
         Todos los derechos reservados <br>
-        Sigame en mis redes sociales
+        <a href="https://github.com/anan416">Aprete aquí para ir a mi GitHub.</a>
         </h6>
     </footer>
     <script src="cod.js"></script>
