--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <h2 id="proyectos">Proyectos.</h2>
                 <p>Al ser estudiante, no he tenido tiempo para proyectos personales, pero he practicado a través de cursos y ejercicios que podrán
                     encontrar en mi Github (En el final de este portafolio lo van a encontrar). <br>
-                    Estos son algunos proyectos que he hecho a lo largo de mi aprendizaje:</p>
+                    Lo que quiero dejar en este portafolio son esos proyectos personales:</p>
                 <ul>
                     <a href="https://bibliolibro.netlify.app/" target="_BLANCK"> · Bibliolibro</a>: Este trabajo fue realizado para el curso
                     de desarrollo web 1. Si bien es un simulador de blog sencillo hecho principalmente con HTML Y CSS, tiene la 
