--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <article class="ladoContrario">
                 <h2 id="conocimientos">Conocimientos.</h2>
                 <p>Mis conocimientos se basan especialmente en el Front End: Manejo HTML, CSS y Javascript; además de la 
-                    biblioteca Bootstrap. <br>
+                    biblioteca Bootstrap. Manejo lo básico de Git. <br>
                     Fuera de desarrollo web, tengo conocimientos sobre Python y sobre SQLite. 
                 </p>
             </article>
