--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
                     de desarrollo web 1. Si bien es un simulador de blog sencillo hecho principalmente con HTML Y CSS, tiene la 
                     característica de utilizar en su página principal elementos con Bootstrap. Le agregué un poco de código de Javascript.
                 </ul>
+                <ul>
+                    <a href="https://glitterina.netlify.app/" target="_BLANCK"> · Glitterina</a>: Este proyecto sigue en proceso. La idea
+                    que tengo con este proyecto es armar un simulador de un negocio de una tienda de vestidos usando HTML, CSS y Javascript.
+                    Por el momento tengo la página principal.
+                </ul>
             </article>
             <article>
                 <h2 id="contactame">Contactame.</h2>
