--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
                 <h2 id="proyectos">Proyectos.</h2>
                 <p>Al ser estudiante, no he tenido tiempo para proyectos personales, pero he practicado a través de cursos y ejercicios que podrán
                     encontrar en mi Github (En el final de este portafolio lo van a encontrar). <br>
-                    Lo que quiero dejar en este portafolio son esos proyectos personales:</p>
+                    Lo que quiero dejar en este portafolio son esos proyectos personales:</p> <br><br>
                 <ul>
                     <a href="https://bibliolibro.netlify.app/" target="_BLANCK"> · Bibliolibro</a>: Este trabajo fue realizado para el curso
                     de desarrollo web 1. Si bien es un simulador de blog sencillo hecho principalmente con HTML Y CSS, tiene la 
                     característica de utilizar en su página principal elementos con Bootstrap. Le agregué un poco de código de Javascript.
-                </ul>
+                </ul> <br><br>
                 <ul>
                     <a href="https://glitterina.netlify.app/" target="_BLANCK"> · Glitterina</a>: Este proyecto sigue en proceso. La idea
                     que tengo con este proyecto es armar un simulador de un negocio de una tienda de vestidos usando HTML, CSS y Javascript.
