--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
             </article>
             <article class="ladoContrario">
                 <h2 id="conocimientos">Conocimientos.</h2>
-                <p>Mis conocimientos se basan especialmente en el Front End: Manejo HTML, CSS y Javascript; además de la 
-                    biblioteca Bootstrap. Manejo lo básico de Git. <br>
-                    Fuera de desarrollo web, tengo conocimientos sobre Python y sobre SQLite. 
+                <p>Mis conocimientos se basan especialmente en el Front End: Manejo HTML, CSS (y el framework Bootstrap), Javascript y lo básico de Git. <br>
+                    Fuera de desarrollo web, tengo conocimientos sobre Python (y su librería de interfaz gráfica tkinter) y SQLite. 
                 </p>
             </article>
             <article>
