--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <button class="boton_responsive fas fa-bars" onclick="mostrar()"></button> <br>
             <div class="nuevo_nav">
                 <i class="fas fa-dice-one"></i>
-                <a onclick="sobreMi()" href="sobreMi"><ul class="barra">Sobre mi</ul></a>
+                <a onclick="sobreMi()" href="#sobreMi"><ul class="barra">Sobre mi</ul></a>
                 <i class="fas fa-dice-two"></i>
                 <a onclick="conocimientos()"><ul class="barra">Conocimientos</ul></a>
                 <i class="fas fa-dice-three"></i>
