--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <i class="fas fa-dice-three"></i>
                 <a onclick="cursos()" href="#cursos"><ul class="barra">Cursos hechos</ul></a>
                 <i class="fas fa-dice-four"></i>
-                <a onclick="proyectos()" href="proyectos"><ul class="barra">Proyectos</ul></a>
+                <a onclick="proyectos()" href="#proyectos"><ul class="barra">Proyectos</ul></a>
                 <i class="fas fa-dice-five"></i>
-                <a onclick="contactame()" href="contactame"><ul class="barra">Contactame</ul></a>
+                <a onclick="contactame()" href="#contactame"><ul class="barra">Contactame</ul></a>
             </div>
 
         </nav>
@@ -40,9 +40,9 @@
             <i class="fas fa-dice-three"></i>
             <a onclick="cursos()" href="#cursos"><ul class="barra">Cursos hechos</ul></a>
             <i class="fas fa-dice-four"></i>
-            <a onclick="proyectos()" href="proyectos"><ul class="barra">Proyectos</ul></a>
+            <a onclick="proyectos()" href="#proyectos"><ul class="barra">Proyectos</ul></a>
             <i class="fas fa-dice-five"></i>
-            <a onclick="contactame()" href="contactame"><ul class="barra">Contactame</ul></a>
+            <a onclick="contactame()" href="#contactame"><ul class="barra">Contactame</ul></a>
         </nav>
     </header>
     <div class="container">
