--- a/index.html
+++ b/index.html
@@ -69,9 +69,8 @@
             </article>
             <article id="proyectos">
                 <h2>Proyectos.</h2>
-                <p>Al ser estudiante, no he tenido tiempo para proyectos personales, pero he practicado a través de cursos y ejercicios que podrán
-                    encontrar en mi Github (En el final de este portafolio lo van a encontrar). <br>
-                    Lo que quiero dejar en este portafolio son esos proyectos personales:</p> <br><br>
+                <p>En esta sección, van a encontrar proyectos que hice personales. Pueden encontrar prácticas y ejercicios en mi github que
+                dejé en el pie de este portafolio:</p> <br><br>
                 <ul>
                     <a href="https://bibliolibro.netlify.app/" target="_BLANCK"> · Bibliolibro</a>: Este trabajo fue realizado para el curso
                     de desarrollo web 1. Si bien es un simulador de blog sencillo hecho principalmente con HTML Y CSS, tiene la 
@@ -80,7 +79,7 @@
                 <ul>
                     <a href="https://glitterina.netlify.app/" target="_BLANCK"> · Glitterina</a>: Este proyecto sigue en proceso. La idea
                     que tengo con este proyecto es armar un simulador de un negocio de una tienda de vestidos usando HTML, CSS y Javascript.
-                    Por el momento tengo la página principal.
+                    Por el momento tengo la página principal, el carrousel será editado proximamente.
                 </ul>
             </article>
             <article id="contactame">
