--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lemon&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Expletus+Sans&display=swap" rel="stylesheet">
     <link rel="icon" href="Imagenes/icon.ico">
-    <link rel="canonical" href="">
+    <link rel="canonical" href="https://portafolioculeddu.netlify.app/">
     <script src="https://kit.fontawesome.com/1a869df086.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -71,6 +71,11 @@
                 <h2>Proyectos.</h2>
                 <p>En esta sección, van a encontrar proyectos que hice personales. Pueden encontrar prácticas y ejercicios en mi github que
                 dejé en el pie de este portafolio:</p> <br><br>
+                <ul>
+                    <a href="https://anncalculator.netlify.app/" target="_BLANCK"> · AnnCalculator</a>: Este proyecto sigue en proceso. Armé una
+                    calculadora que por el momento funciona lo básico. Se puede poner la pantalla oscura o clara, como lo desee el usuario. 
+                    Está hecha solamente de HTML, CSS y Javascript
+                </ul>
                 <ul>
                     <a href="https://bibliolibro.netlify.app/" target="_BLANCK"> · Bibliolibro</a>: Este trabajo fue realizado para el curso
                     de desarrollo web 1. Si bien es un simulador de blog sencillo hecho principalmente con HTML Y CSS, tiene la 
