--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <ul>
                     <a href="https://anncalculator.netlify.app/" target="_BLANCK"> · AnnCalculator</a>: Este proyecto sigue en proceso. Armé una
                     calculadora que por el momento funciona lo básico. Se puede poner la pantalla oscura o clara, como lo desee el usuario. 
-                    Está hecha solamente de HTML, CSS y Javascript
+                    Está hecha solamente de HTML, CSS y Javascript.
                 </ul> <br><br>
                 <ul>
                     <a href="https://bibliolibro.netlify.app/" target="_BLANCK"> · Bibliolibro</a>: Este trabajo fue realizado para el curso
