--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lemon&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Expletus+Sans&display=swap" rel="stylesheet">
     <link rel="icon" href="Imagenes/icon.ico">
-    <link rel="canonical" href="https://portafolioculeddu.netlify.app/">
+    <link rel="canonical" href="">
     <script src="https://kit.fontawesome.com/1a869df086.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -19,30 +19,30 @@
             <button class="boton_responsive fas fa-bars" onclick="mostrar()"></button> <br>
             <div class="nuevo_nav">
                 <i class="fas fa-dice-one"></i>
-                <a onclick="sobreMi()" href="#sobreMi"><ul class="barra">Sobre mi</ul></a>
+                <a onclick="sobreMi()"><ul class="barra">Sobre mi</ul></a>
                 <i class="fas fa-dice-two"></i>
-                <a onclick="conocimientos()" href="#conocimientos"><ul class="barra">Conocimientos</ul></a>
+                <a onclick="conocimientos()"><ul class="barra">Conocimientos</ul></a>
                 <i class="fas fa-dice-three"></i>
-                <a onclick="cursos()" href="#cursos"><ul class="barra">Cursos hechos</ul></a>
+                <a onclick="cursos()"><ul class="barra">Certificados</ul></a>
                 <i class="fas fa-dice-four"></i>
-                <a onclick="proyectos()" href="#proyectos"><ul class="barra">Proyectos</ul></a>
+                <a onclick="proyectos()"><ul class="barra">Proyectos</ul></a>
                 <i class="fas fa-dice-five"></i>
-                <a onclick="contactame()" href="#contactame"><ul class="barra">Contactame</ul></a>
+                <a onclick="contactame()"><ul class="barra">Contactame</ul></a>
             </div>
 
         </nav>
         <h1>Mi portafolio</h1>
         <nav class="navegador">
             <i class="fas fa-dice-one"></i>
-            <a onclick="sobreMi()" href="#sobreMi"><ul class="barra">Sobre mi</ul></a>
+            <a onclick="sobreMi()"><ul class="barra">Sobre mi</ul></a>
             <i class="fas fa-dice-two"></i>
-            <a onclick="conocimientos()" href="#conocimientos"><ul class="barra">Conocimientos</ul></a>
+            <a onclick="conocimientos()"><ul class="barra">Conocimientos</ul></a>
             <i class="fas fa-dice-three"></i>
-            <a onclick="cursos()" href="#cursos"><ul class="barra">Cursos hechos</ul></a>
+            <a onclick="cursos()"><ul class="barra">Certificados</ul></a>
             <i class="fas fa-dice-four"></i>
-            <a onclick="proyectos()" href="#proyectos"><ul class="barra">Proyectos</ul></a>
+            <a onclick="proyectos()"><ul class="barra">Proyectos</ul></a>
             <i class="fas fa-dice-five"></i>
-            <a onclick="contactame()" href="#contactame"><ul class="barra">Contactame</ul></a>
+            <a onclick="contactame()"><ul class="barra">Contactame</ul></a>
         </nav>
     </header>
     <div class="container">
@@ -56,26 +56,23 @@
             <article id="conocimientos">
                 <h2>Conocimientos.</h2>
                 <p>Mis conocimientos se basan especialmente en el Front End: Manejo HTML, CSS (y el framework Bootstrap), Javascript y lo básico de Git. <br>
-                    Fuera de desarrollo web, tengo conocimientos sobre Python (y su librería de interfaz gráfica tkinter) y SQLite.
+                    Fuera de desarrollo web, tengo conocimientos sobre Python (y su librería de interfaz gráfica tkinter), SQLite y MYsql.
                 </p>
             </article>
             <article id="cursos">
-                <h2>Cursos hechos.</h2>
+                <h2>Certificados.</h2>
                 <img src="Imagenes/desarrollo1.png" alt="desarrollo web 1 certificado">
                 <img src="Imagenes/participacion.png" alt="certificado de participación">
                 <img src="Imagenes/desarrollo2.png" alt="desarrollo web 1 certificado">
                 <img src="Imagenes/cuinivelbasico.png" alt="cui nivel básico">
                 <img src="Imagenes/cuiconsolidacion.png" alt="cui consolidacion">
+                <img src="Imagenes/aidis.png" alt="Aidis">
             </article>
             <article id="proyectos">
                 <h2>Proyectos.</h2>
-                <p>En esta sección, van a encontrar proyectos que hice personales. Pueden encontrar prácticas y ejercicios en mi github que
-                dejé en el pie de este portafolio:</p> <br><br>
-                <ul>
-                    <a href="https://anncalculator.netlify.app/" target="_BLANCK"> · AnnCalculator</a>: Este proyecto sigue en proceso. Armé una
-                    calculadora que por el momento funciona lo básico. Se puede poner la pantalla oscura o clara, como lo desee el usuario. 
-                    Está hecha solamente de HTML, CSS y Javascript.
-                </ul> <br><br>
+                <p>Al ser estudiante, no he tenido tiempo para proyectos personales, pero he practicado a través de cursos y ejercicios que podrán
+                    encontrar en mi Github (En el final de este portafolio lo van a encontrar). <br>
+                    Lo que quiero dejar en este portafolio son esos proyectos personales:</p> <br><br>
                 <ul>
                     <a href="https://bibliolibro.netlify.app/" target="_BLANCK"> · Bibliolibro</a>: Este trabajo fue realizado para el curso
                     de desarrollo web 1. Si bien es un simulador de blog sencillo hecho principalmente con HTML Y CSS, tiene la 
@@ -84,7 +81,7 @@
                 <ul>
                     <a href="https://glitterina.netlify.app/" target="_BLANCK"> · Glitterina</a>: Este proyecto sigue en proceso. La idea
                     que tengo con este proyecto es armar un simulador de un negocio de una tienda de vestidos usando HTML, CSS y Javascript.
-                    Por el momento tengo la página principal, el carrousel será editado proximamente.
+                    Por el momento tengo la página principal.
                 </ul>
             </article>
             <article id="contactame">
