--- a/index.html
+++ b/index.html
@@ -19,30 +19,30 @@
             <button class="boton_responsive fas fa-bars" onclick="mostrar()"></button> <br>
             <div class="nuevo_nav">
                 <i class="fas fa-dice-one"></i>
-                <a onclick="sobreMi()"><ul class="barra">Sobre mi</ul></a>
+                <a onclick="sobreMi() href="sobreMi""><ul class="barra">Sobre mi</ul></a>
                 <i class="fas fa-dice-two"></i>
-                <a onclick="conocimientos()"><ul class="barra">Conocimientos</ul></a>
+                <a onclick="conocimientos()" href="conocimientos"><ul class="barra">Conocimientos</ul></a>
                 <i class="fas fa-dice-three"></i>
-                <a onclick="cursos()"><ul class="barra">Certificados</ul></a>
+                <a onclick="cursos()" href="cursos"><ul class="barra">Certificados</ul></a>
                 <i class="fas fa-dice-four"></i>
-                <a onclick="proyectos()"><ul class="barra">Proyectos</ul></a>
+                <a onclick="proyectos()" href="proyectos"><ul class="barra">Proyectos</ul></a>
                 <i class="fas fa-dice-five"></i>
-                <a onclick="contactame()"><ul class="barra">Contactame</ul></a>
+                <a onclick="contactame()" href="contactame"><ul class="barra">Contactame</ul></a>
             </div>
 
         </nav>
         <h1>Mi portafolio</h1>
         <nav class="navegador">
             <i class="fas fa-dice-one"></i>
-            <a onclick="sobreMi()"><ul class="barra">Sobre mi</ul></a>
+            <a onclick="sobreMi()" href="sobreMi"><ul class="barra">Sobre mi</ul></a>
             <i class="fas fa-dice-two"></i>
-            <a onclick="conocimientos()"><ul class="barra">Conocimientos</ul></a>
+            <a onclick="conocimientos()" href="conocimientos"><ul class="barra">Conocimientos</ul></a>
             <i class="fas fa-dice-three"></i>
-            <a onclick="cursos()"><ul class="barra">Certificados</ul></a>
+            <a onclick="cursos()" href="cursos"><ul class="barra">Certificados</ul></a>
             <i class="fas fa-dice-four"></i>
-            <a onclick="proyectos()"><ul class="barra">Proyectos</ul></a>
+            <a onclick="proyectos()" href="proyectos"><ul class="barra">Proyectos</ul></a>
             <i class="fas fa-dice-five"></i>
-            <a onclick="contactame()"><ul class="barra">Contactame</ul></a>
+            <a onclick="contactame()" href="contactame"><ul class="barra">Contactame</ul></a>
         </nav>
     </header>
     <div class="container">
