--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
         <section>
             <article id="sobreMi">
                 <h2>Sobre mi.</h2>
-                <p>Me llamo Ana Clara Culeddu, tengo 17 años y estudio una tecnicatura en Computación. <br>
-                    No tengo experiencia trabajando, por lo que me gustaría empezar con desarrollo web ya que creo que es en lo que mejor me especializo.
+                <p>Me llamo Ana Clara Culeddu, tengo 17 años y estudio en una secundaria técnica con orientación en Computación. <br>
+                    No cuento con experiencias de puestos laborales. Sin embargo, en un futuro me gustaría empezar como desarrolladora
+                    web.
                 </p>
             </article>
             <article id="conocimientos">
@@ -70,8 +71,7 @@
             </article>
             <article id="proyectos">
                 <h2>Proyectos.</h2>
-                <p>Al ser estudiante, no he tenido tiempo para proyectos personales, pero he practicado a través de cursos y ejercicios que podrán
-                    encontrar en mi Github (En el final de este portafolio lo van a encontrar). <br>
+                <p>Dentro de mi Githut (link en el final del portafolio), podrán encontrar ejercicios y proyectos con los que aprendí<br>
                     Lo que quiero dejar en este portafolio son esos proyectos personales:</p> <br><br>
                 <ul>
                     <a href="https://bibliolibro.netlify.app/" target="_BLANCK"> · Bibliolibro</a>: Este trabajo fue realizado para el curso
@@ -83,6 +83,10 @@
                     que tengo con este proyecto es armar un simulador de un negocio de una tienda de vestidos usando HTML, CSS y Javascript.
                     Por el momento tengo la página principal.
                 </ul>
+                <ul>
+                    <a href="https://anncalculator.netlify.app/" target="_BLANCK"> · Glitterina</a>: Este proyecto sigue en proceso. La idea
+                    es realizar una calculadora con variadas funciones. Por el momento, se encuentran las operaciones básicas.
+                </ul>             
             </article>
             <article id="contactame">
                 <h2>Contactame.</h2>
