--- a/index.html
+++ b/index.html
@@ -86,7 +86,12 @@
                 <ul>
                     <a href="https://anncalculator.netlify.app/" target="_BLANCK"> · Glitterina</a>: Este proyecto sigue en proceso. La idea
                     es realizar una calculadora con variadas funciones. Por el momento, se encuentran las operaciones básicas.
-                </ul>             
+                </ul>      
+                <ul>
+                    <a href="https://redessociales.netlify.app" target="_BLANCK"> · Mis redes sociales</a>: Quise salir de mi zona de confort
+                    probando el uso de variables y de grid para armar una simple página web donde se pueda acceder facilmente a mis redes
+                    sociales. 
+                </ul> 
             </article>
             <article id="contactame">
                 <h2>Contactame.</h2>
