--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
                     <a href="https://glitterina.netlify.app/" target="_BLANCK"> · Glitterina</a>: Este proyecto sigue en proceso. La idea
                     que tengo con este proyecto es armar un simulador de un negocio de una tienda de vestidos usando HTML, CSS y Javascript.
                     Por el momento tengo la página principal.
-                </ul>
+                </ul> <br><br>
                 <ul>
-                    <a href="https://anncalculator.netlify.app/" target="_BLANCK"> · Glitterina</a>: Este proyecto sigue en proceso. La idea
+                    <a href="https://anncalculator.netlify.app/" target="_BLANCK"> · Ann Calculator</a>: Este proyecto sigue en proceso. La idea
                     es realizar una calculadora con variadas funciones. Por el momento, se encuentran las operaciones básicas.
                 </ul>      
-                <ul>
+                <ul> <br><br>
                     <a href="https://redessociales.netlify.app" target="_BLANCK"> · Mis redes sociales</a>: Quise salir de mi zona de confort
                     probando el uso de variables y de grid para armar una simple página web donde se pueda acceder facilmente a mis redes
                     sociales. 
