--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <article id="proyectos">
                 <h2>Proyectos.</h2>
                 <p>Dentro de mi Githut (link en el final del portafolio), podrán encontrar ejercicios y proyectos con los que aprendí<br>
-                    Lo que quiero dejar en este portafolio son esos proyectos personales:</p> <br><br>
+                    Lo que quiero dejar en este portafolio son proyectos personales:</p> <br><br>
                 <ul>
                     <a href="https://bibliolibro.netlify.app/" target="_BLANCK"> · Bibliolibro</a>: Este trabajo fue realizado para el curso
                     de desarrollo web 1. Si bien es un simulador de blog sencillo hecho principalmente con HTML Y CSS, tiene la 
