--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <textarea required placeholder="Ingrese descripción de lo deseado." name="Descripción del producto."></textarea>
                     <p>Día de entrega:</p>
                     <input type="date" name="Día ideal de entrega.">
-                    <p>Fecha de entrega:</p>
+                    <p>Hora de entrega:</p>
                     <input type="time" name="Hora ideal de entrega.">
                     <input type="submit" name="Botón de envio." class="envio">
                 </form>
