--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <section>
             <article id="sobreMi">
                 <h2>Sobre mi.</h2>
-                <p>Me llamo Ana Clara Culeddu, tengo 17 años y estudio en una secundaria técnica con orientación en Computación. <br>
+                <p>Me llamo Ana Clara Culeddu, tengo 18 años y estudio en una secundaria técnica con orientación en Computación. <br>
                     No cuento con experiencias de puestos laborales. Sin embargo, en un futuro me gustaría empezar como desarrolladora
                     web.
                 </p>
@@ -57,7 +57,8 @@
             <article id="conocimientos">
                 <h2>Conocimientos.</h2>
                 <p>Mis conocimientos se basan especialmente en el Front End: Manejo HTML, CSS (y el framework Bootstrap), Javascript y lo básico de Git. <br>
-                    Fuera de desarrollo web, tengo conocimientos sobre Python (y su librería de interfaz gráfica tkinter), SQLite y MYsql.
+                    Fuera de desarrollo web, tengo conocimientos sobre Python (y su librería de interfaz gráfica tkinter), SQLite y MYsql en cuanto a bases
+                    de datos y lo básico de C++ y Java.
                 </p>
             </article>
             <article id="cursos">
@@ -74,14 +75,14 @@
                 <p>Dentro de mi Githut (link en el final del portafolio), podrán encontrar ejercicios y proyectos con los que aprendí<br>
                     Lo que quiero dejar en este portafolio son proyectos personales:</p> <br><br>
                 <ul>
+                    <a href="https://randomwebpages.netlify.app/" target="_BLANCK"> · Random Webpages</a>: Esta página en inglés está programada
+                    para llevarte a otro sitio web según el botón que eligas. Se encuentran los sitios divertidos, para estudiar, para ver 
+                    películas y para jugar videojuegos.
+                </ul> <br><br>
+                <ul>
                     <a href="https://bibliolibro.netlify.app/" target="_BLANCK"> · Bibliolibro</a>: Este trabajo fue realizado para el curso
                     de desarrollo web 1. Si bien es un simulador de blog sencillo hecho principalmente con HTML Y CSS, tiene la 
                     característica de utilizar en su página principal elementos con Bootstrap. Le agregué un poco de código de Javascript.
-                </ul> <br><br>
-                <ul>
-                    <a href="https://glitterina.netlify.app/" target="_BLANCK"> · Glitterina</a>: Este proyecto sigue en proceso. La idea
-                    que tengo con este proyecto es armar un simulador de un negocio de una tienda de vestidos usando HTML, CSS y Javascript.
-                    Por el momento tengo la página principal.
                 </ul> <br><br>
                 <ul>
                     <a href="https://anncalculator.netlify.app/" target="_BLANCK"> · Ann Calculator</a>: Este proyecto sigue en proceso. La idea
@@ -92,6 +93,11 @@
                     probando el uso de variables y de grid para armar una simple página web donde se pueda acceder facilmente a mis redes
                     sociales. 
                 </ul> 
+                <ul>
+                    <a href="https://glitterina.netlify.app/" target="_BLANCK"> · Glitterina</a>: Este proyecto sigue en proceso. La idea
+                    que tengo con este proyecto es armar un simulador de un negocio de una tienda de vestidos usando HTML, CSS y Javascript.
+                    Por el momento tengo la página principal.
+                </ul> <br><br>
             </article>
             <article id="contactame">
                 <h2>Contactame.</h2>
