--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </article>
             <article id="proyectos">
                 <h2>Proyectos.</h2>
-                <p>Dentro de mi Githut (link en el final del portafolio), podrán encontrar ejercicios y proyectos con los que aprendí<br>
+                <p>Dentro de mi Github (link en el final del portafolio), podrán encontrar ejercicios y proyectos con los que aprendí<br>
                     Lo que quiero dejar en este portafolio son proyectos personales:</p> <br><br>
                 <ul>
                     <a href="https://randomwebpages.netlify.app/" target="_BLANCK"> · Random Webpages</a>: Esta página en inglés está programada
