--- a/index.html
+++ b/index.html
@@ -73,7 +73,12 @@
             <article id="proyectos">
                 <h2>Proyectos.</h2>
                 <p>Dentro de mi Github (link en el final del portafolio), podrán encontrar ejercicios y proyectos con los que aprendí<br>
-                    Lo que quiero dejar en este portafolio son proyectos personales:</p> <br><br>
+                    Destaco algunos proyectos:</p> <br><br>
+                <ul>
+                    <a href="https://padlet.com/anacc11104/tuhorario-kk3yg55lur2ilgcv" target="_BLANCK"> · TuHorario</a>: realizado para
+                    la materia "Proyecto Informático I", es un planner semanal programado con Python y con uso de la base de datos SQLite.
+                    Permite al usuario organizar sus horarios, con una función extra para guardar links y acceder a ellos con facilidad.
+                </ul> <br><br>                
                 <ul>
                     <a href="https://randomwebpages.netlify.app/" target="_BLANCK"> · Random Webpages</a>: Esta página en inglés está programada
                     para llevarte a otro sitio web según el botón que eligas. Se encuentran los sitios divertidos, para estudiar, para ver 
@@ -93,11 +98,6 @@
                     probando el uso de variables y de grid para armar una simple página web donde se pueda acceder facilmente a mis redes
                     sociales. 
                 </ul> <br> <br>
-                <ul>
-                    <a href="https://glitterina.netlify.app/" target="_BLANCK"> · Glitterina</a>: Este proyecto sigue en proceso. La idea
-                    que tengo con este proyecto es armar un simulador de un negocio de una tienda de vestidos usando HTML, CSS y Javascript.
-                    Por el momento tengo la página principal.
-                </ul> <br><br>
             </article>
             <article id="contactame">
                 <h2>Contactame.</h2>
