--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         <section>
             <article id="sobreMi">
                 <h2>Sobre mi.</h2>
-                <p>Me llamo Ana Clara Culeddu, tengo 18 años y estudio en una secundaria técnica con orientación en Computación. <br>
+                <p>Me llamo Ana Clara Culeddu, tengo 19 años y soy técnica en computación a nivel secundario, además de estudiante de ingeniería de sistemas de información <br>
                     No cuento con experiencias de puestos laborales. Sin embargo, en un futuro me gustaría empezar como desarrolladora
-                    web.
+                    web. El desarrollo web es la rama que más me apasiona. 
                 </p>
             </article>
             <article id="conocimientos">
@@ -90,14 +90,9 @@
                     característica de utilizar en su página principal elementos con Bootstrap. Le agregué un poco de código de Javascript.
                 </ul> <br><br>
                 <ul>
-                    <a href="https://anncalculator.netlify.app/" target="_BLANCK"> · Ann Calculator</a>: Este proyecto sigue en proceso. La idea
-                    es realizar una calculadora con variadas funciones. Por el momento, se encuentran las operaciones básicas.
+                    <a href="https://anncalculator.netlify.app/" target="_BLANCK"> · Ann Calculator</a>: Es una calculadora con funciones avanzadas, además de 
+                    contar con animación al tener el modo oscuro.
                 </ul>      
-                <ul> <br><br>
-                    <a href="https://redessociales.netlify.app" target="_BLANCK"> · Mis redes sociales</a>: Quise salir de mi zona de confort
-                    probando el uso de variables y de grid para armar una simple página web donde se pueda acceder facilmente a mis redes
-                    sociales. 
-                </ul> <br> <br>
             </article>
             <article id="contactame">
                 <h2>Contactame.</h2>
@@ -105,11 +100,7 @@
                     <p>Mail:</p>
                     <input type="email" required placeholder="Ingrese su mail." name="Mail del cliente.">
                     <p>Pedido:</p>
-                    <textarea required placeholder="Ingrese descripción de lo deseado." name="Descripción del producto."></textarea>
-                    <p>Día de entrega:</p>
-                    <input type="date" name="Día ideal de entrega.">
-                    <p>Hora de entrega:</p>
-                    <input type="time" name="Hora ideal de entrega.">
+                    <textarea required placeholder="Ingrese descripción de lo deseado." name="Descripción"></textarea>
                     <input type="submit" name="Botón de envio." class="envio">
                 </form>
             </article>
