--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
                 <p>Dentro de mi Github (link en el final del portafolio), podrán encontrar ejercicios y proyectos con los que aprendí<br>
                     Destaco algunos proyectos:</p> <br><br>
                 <ul>
+                    <a href="https://taketheball.netlify.app/" target="_BLANCK"> · Take the ball</a>: es el primer videojuego que programé.
+                    Consiste en intentar agarrar la pelota de la pantalla, pero esta se mueve cuando el mouse pasa por encima de ella. La
+                    dificultad del juego es encontrar una estrategia para agarrar la pelota.
+                </ul> <br><br>    
+                <ul>
                     <a href="https://padlet.com/anacc11104/tuhorario-kk3yg55lur2ilgcv" target="_BLANCK"> · TuHorario</a>: realizado para
                     la materia "Proyecto Informático I", es un planner semanal programado con Python y con uso de la base de datos SQLite.
                     Permite al usuario organizar sus horarios, con una función extra para guardar links y acceder a ellos con facilidad.
