--- a/index.html
+++ b/index.html
@@ -19,30 +19,30 @@
             <button class="boton_responsive fas fa-bars" onclick="mostrar()"></button> <br>
             <div class="nuevo_nav">
                 <i class="fas fa-dice-one"></i>
-                <a onclick="sobreMi()" href="#sobreMi"><ul class="barra">Sobre mi</ul></a>
+                <a onclick="sobreMi()" href="#sobreMi" class="seccion1"><ul class="barra">Sobre mi</ul></a>
                 <i class="fas fa-dice-two"></i>
-                <a onclick="conocimientos()" href="#conocimientos"><ul class="barra">Conocimientos</ul></a>
+                <a onclick="conocimientos()" href="#conocimientos" class="seccion2"><ul class="barra">Conocimientos</ul></a>
                 <i class="fas fa-dice-three"></i>
-                <a onclick="cursos()" href="#cursos"><ul class="barra">Certificados</ul></a>
+                <a onclick="cursos()" href="#cursos" class="seccion3"><ul class="barra">Certificados</ul></a>
                 <i class="fas fa-dice-four"></i>
-                <a onclick="proyectos()" href="#proyectos"><ul class="barra">Proyectos</ul></a>
+                <a onclick="proyectos()" href="#proyectos" class="seccion4"><ul class="barra">Proyectos</ul></a>
                 <i class="fas fa-dice-five"></i>
-                <a onclick="contactame()" href="#contactame"><ul class="barra">Contactame</ul></a>
+                <a onclick="contactame()" href="#contactame" class="seccion5"><ul class="barra">Contactame</ul></a>
             </div>
 
         </nav>
         <h1>Mi portafolio</h1>
         <nav class="navegador">
             <i class="fas fa-dice-one"></i>
-            <a onclick="sobreMi()" href="#sobreMi"><ul class="barra">Sobre mi</ul></a>
+            <a onclick="sobreMi()" href="#sobreMi"><ul class="barra seccion1">Sobre mi</ul></a>
             <i class="fas fa-dice-two"></i>
-            <a onclick="conocimientos()" href="#conocimientos"><ul class="barra">Conocimientos</ul></a>
+            <a onclick="conocimientos()" href="#conocimientos" class="seccion2"><ul class="barra">Conocimientos</ul></a>
             <i class="fas fa-dice-three"></i>
-            <a onclick="cursos()" href="#cursos"><ul class="barra">Certificados</ul></a>
+            <a onclick="cursos()" href="#cursos" class="seccion3"><ul class="barra">Certificados</ul></a>
             <i class="fas fa-dice-four"></i>
-            <a onclick="proyectos()" href="#proyectos"><ul class="barra">Proyectos</ul></a>
+            <a onclick="proyectos()" href="#proyectos" class="seccion4"><ul class="barra">Proyectos</ul></a>
             <i class="fas fa-dice-five"></i>
-            <a onclick="contactame()" href="#contactame"><ul class="barra">Contactame</ul></a>
+            <a onclick="contactame()" href="#contactame" class="seccion5"><ul class="barra">Contactame</ul></a>
         </nav>
     </header>
     <div class="container">
@@ -63,12 +63,15 @@
             </article>
             <article id="cursos">
                 <h2>Certificados.</h2>
+                <img src="Imagenes/diplomasecundario.jpeg" alt="diploma del secundario">
+                <img src="Imagenes/innovar.jpeg" alt="innovar">
                 <img src="Imagenes/desarrollo1.png" alt="desarrollo web 1 certificado">
                 <img src="Imagenes/participacion.png" alt="certificado de participación">
                 <img src="Imagenes/desarrollo2.png" alt="desarrollo web 1 certificado">
                 <img src="Imagenes/cuinivelbasico.png" alt="cui nivel básico">
                 <img src="Imagenes/cuiconsolidacion.png" alt="cui consolidacion">
-                <img src="Imagenes/aidis.png" alt="Aidis">
+                <img src="Imagenes/asistencia.jpeg" alt="mejor asistencia">
+                <img src="Imagenes/aidis.png" alt="aidis">
             </article>
             <article id="proyectos">
                 <h2>Proyectos.</h2>
